...
      app:layout_constraintHorizontal_bias="0.064"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/avatarNeighbour"
      app:layout_constraintVertical_bias="0.895" />

  <ImageButton
      android:id="@+id/backButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="#00FFFFFF"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.044"
...

    </android.support.constraint.ConstraintLayout>

  </android.support.v7.widget.CardView>

  <android.support.design.widget.FloatingActionButton
      android:id="@+id/add_favorite"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="248dp"
      android:clickable="true"
      app:backgroundTint="#DFDCDCDC"
      app:layout_constraintBottom_toBottomOf="parent"
...
